--- a/posts/static/posts/main.css
+++ b/posts/static/posts/main.css
@@ -82,7 +82,8 @@ body {
     margin-bottom: 16px;
 }
 
-.article{
+.article,
+.article-delete{
     display: flex;
     border-bottom: 1px solid #eee;
     gap: 24px;
@@ -90,13 +91,52 @@ body {
     padding-bottom: 24px;
 }
 
-.article-image{
+.article-delete{
+    background-color: #fffbe6;
+    border: 1px solid #ffe58f;
+    padding: 16px;
+    border-radius: 8px;
+}
+
+.article-image
+.article-image-delete{
     flex: 0 0 180px;
     background-color: lightgray;
+    height: 120px;
+}
+
+.article-image-delete{
+    width: 180px;
+    height: 120px;
+}
+.article-image img,
+.article-image-delete img{
+    object-fit: cover;
+    width: 180px;
     height: 120px;
 }
 
 .article-date{
     color: #888;
     margin-bottom: 10px;
+}
+
+.delete-text{
+    color: red;
+    font-weight: bold;
+}
+
+.article-details{
+    display: flex;
+    flex-direction: row;
+}
+
+.article-dot{
+    margin-left: 8px;
+    color: #888;
+}
+
+.article-category{
+    color: #007bff;
+    margin-left: 8px;
 }
