--- a/posts/templates/posts/edit.html
+++ b/posts/templates/posts/edit.html
@@ -4,7 +4,7 @@
 <div class="main-container">
     <h1>Edit Blog Post</h1>
 
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
         {{ form.as_p }}
