--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -1,40 +1,65 @@
-{% extends 'posts\base.html'%}
-{% block content %}
+{% extends "posts/base.html"%}
+
+{%block content%}
+
     <div class="main-container">
-       <div class="topbar">
-           <h1 class="title">Welcome to our Blog!</h1>
+        <div class="topbar">
+            <h1 class="title">Welcome to our blog!</h1>
         </div>
-        {% if blogscount == 0 %}
-            <p>There are no blog posts yet</p>
-        {% else %}
+
+        {% if blogscount == 0%}
+
+        <p> There are no blog posts yet</p>
+
+        {%else%}
+
         <div>
-            {% for blog in blogs %}
+            {% for blog in blogs%}
                 <div class="article">
                     <div class="article-image">
                         {% if blog.image %}
-                            <img src="{{ blog.image.url }}">
+                        <img src="{{blog.image.url}}">
                         {% endif %}
                     </div>
+
                     <div class="article-content">
-                        <h2>{{ blog.title }}</h2>
+                        <h2>{{blog.title}}</h2>
+
                         <div class="article-details">
-                            <div class="article-date" >{{ blog.created_on|date:"F j, Y" }}</div>
+                            <div class="article-date">{{blog.created_on|date:"F j, Y"}}</div>
                             {% if blog.category %}
-                                <div class="article-dot">
-                                    &middot;
-                                </div>
-                                <p class="article-category">{{ blog.category.name }}</p>
-                            {% endif %}
+                                <div class="article-dot">&middot;</div>
+                                <p class="article-category">{{blog.category.name}}</p>
+                            {% endif%}
                         </div>
-                        <p>{{ blog.content|truncatechars:200 }}</p>
-                        <div class="article-button">
+                        
+                        
+                        <p>{{blog.content|truncatechars:200}}</p>
+
+                        {% if blog.tags.all %}
+                        <div class="tag-holder">
+                            {% for tag in blog.tags.all %}
+                                <span class="article-tags"> #{{tag.name}}</span>
+                            {%endfor%}
+                        </div>
+                        {% endif %}
+
+                        <div class="article-buttons">
                             <a class="btn btn-outline-primary" href="{% url 'edit' blog.id %}">Edit</a>
                             <a class="btn btn-outline-danger" href="{% url 'delete' blog.id %}">Delete</a>
                         </div>
+
                     </div>
+
+                    
+
                 </div>
             {% endfor %}
         </div>
-        {% endif %}
+
+        {%endif%}
     </div>
-{% endblock %}
+   
+
+
+{%endblock%}
