--- a/posts/static/posts/main.css
+++ b/posts/static/posts/main.css
@@ -116,6 +116,12 @@ body{
   height: 120px;
 }
 
+.article-image-details img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 .article-date{
   color:#888;
   margin-bottom: 8px;
