editing home and add button read more...

--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -45,8 +45,7 @@
                         {% endif %}
 
                         <div class="article-buttons">
-                            <a class="btn btn-outline-primary" href="{% url 'edit' blog.id %}">Edit</a>
-                            <a class="btn btn-outline-danger" href="{% url 'delete' blog.id %}">Delete</a>
+                            <a class="btn btn-outline-primary" href="{% url 'details' blog.id %}">Read more...</a>
                         </div>
 
                     </div>
