--- a/posts/templates/posts/blogposts.html
+++ b/posts/templates/posts/blogposts.html
@@ -5,7 +5,7 @@
             <h1 class="title">Blog posts user1</h1>
             <a class="btn btn-primary" href="{% url 'create' %}">Create Blog Post</a>
         </div>
-        {% if blogcount==0 %}
+        {% if blogcount == 0 %}
             <p>There are no blog posts yet!!</p>
         {% else %}
         <div>
@@ -42,5 +42,6 @@
             </div>
             {% endfor %}
         </div>
+        {% endif %}
     </div>
 {% endblock %}
